fix(matchcard): buteurs droite alignés à gauche

--- a/src/components/calendrier/MatchCard.module.css
+++ b/src/components/calendrier/MatchCard.module.css
@@ -171,8 +171,8 @@
 }
 
 .scorersRight {
-  align-items: flex-end;
-  text-align: right;
+  align-items: flex-start;
+  text-align: left;
 }
 
 .scorersSep {
